# socceraction

./: .bumpversion.cfg  .darglint  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CONTRIBUTING.rst  LICENSE  LICENSE.rst  LICENSE.txt  Makefile  README.md  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  constraints.txt  labeler.yml  release.yml
atomic/: atomic_spadl.py  features.py  labels.py  vaep.py
atomic-notebooks/: 1-load-and-convert-statsbomb-data.ipynb  2-compute-features-and-labels.ipynb  3-estimate-scoring-and-conceding-probabilities.ipynb  4-compute-vaep-values-and-top-players.ipynb
docs/: Makefile  README_pip.md  conf.py  index.rst  requirements.txt  wyscout_tags.csv
docs/_static/: custom.css  decroos19.bibtex  logo.ai  vanroy20.bibtex
docs/api/: atomic_vaep.rst  attributes.rst  data.rst  data_base.rst  data_opta.rst  data_statsbomb.rst  data_wyscout.rst  spadl_atomic.rst  spadl_regular.rst  vaep.rst  xthreat.rst
docs/development/: changelog.rst  developer_guide.rst
docs/documentation/: Atomic_VAEP.rst  SPADL.rst  SPADL_definitions.rst  VAEP.rst  faq.rst  install.rst  intro.rst  providers.rst  valuing_actions.rst  xT.rst
docs/documentation/data/: index.rst  opta.rst  statsbomb.rst  wyscout.rst
docs/documentation/spadl/: SPADL_definitions.rst  atomic_spadl.rst  index.rst  spadl.rst
docs/documentation/valuing_actions/: atomic_vaep.rst  index.rst  vaep.rst  xT.rst
docs/modules/: atomic.rst  atomic_vaep.rst  data.rst  data_opta.rst  data_statsbomb.rst  data_wyscout.rst  spadl.rst  spadl_atomic.rst  spadl_regular.rst  vaep.rst  xthreat.rst
notebooks/: Untitled.ipynb  convert-opta.ipynb  features.ipynb  inspect-features-targets.ipynb  inspect-vaep-values.ipynb  opta-json-to-h5.ipynb  solve-classification-problem.ipynb  statbomb-demo.ipynb  statsbomb-demo.ipynb
public-notebooks/: 1-download-statsbomb-data.ipynb  1-load-and-convert-statsbomb-data.ipynb  2-compute-features-and-labels.ipynb  2-convert-statsbomb-to-spadl.ipynb  3-compute-features-and-labels.ipynb  3-estimate-scoring-and-conceding-probabilities.ipynb  4-compute-vaep-values-and-top-players.ipynb  4-compute-vaep-values.ipynb  4-estimate-scoring-and-conceding-probabilities.ipynb  5-compute-vaep-values.ipynb  5-top-players.ipynb  6-top-players.ipynb  ATOMIC-1-load-and-convert-statsbomb-data.ipynb  ATOMIC-2-compute-features-and-labels.ipynb  ATOMIC-3-estimate-scoring-and-conceding-probabilities.ipynb  ATOMIC-4-compute-vaep-values-and-top-players.ipynb  EXTRA-build-expected-goals-model.ipynb  EXTRA-run-xT.ipynb
public-notebooks/01-data/: 1-load-statsbomb-data.ipynb  2-convert-events-to-actions.ipynb
public-notebooks/1-Data/: 1.1-load-statsbomb-data.ipynb  1.2-convert-events-to-actions.ipynb  1.3-generate-features.ipynb
public-notebooks/2-xG/: 2.1-basic-usage.ipynb  2.2-statsbomb-xg-model.ipynb
public-notebooks/3-xT/: 3.1-estimate-xT.ipynb
socceraction/: __init__.py  base.py  statsbombloader.py  types.py  utils.py  vaep.py  xthreat.py
socceraction/atomic/: __init__.py  spadl.py
socceraction/atomic/attributes/: __init__.py  spadl.py  utils.py
socceraction/atomic/features/: __init__.py  spadl.py  utils.py
socceraction/atomic/spadl/: __init__.py  base.py  config.py  schema.py  utils.py
socceraction/atomic/vaep/: __init__.py  base.py  features.py  formula.py  labels.py
socceraction/attributes/: __init__.py  utils.py
socceraction/attributes/event/: statsbomb.py
socceraction/attributes/spadl/: actiontype.py  bodypart.py  contextual.py  location.py  possession.py  result.py  sequence.py  shot.py
socceraction/classification/: features.py  labels.py
socceraction/data/: __init__.py  base.py  schema.py  transforms.py
socceraction/data/dataset/: __init__.py  base.py  hdf.py  sql.py
socceraction/data/opta/: __init__.py  loader.py  schema.py
socceraction/data/opta/parsers/: __init__.py  base.py  f1_json.py  f24_json.py  f24_xml.py  f7_xml.py  f9_json.py  ma12_json.py  ma1_json.py  ma3_json.py  ma5_json.py  whoscored.py
socceraction/data/providers/: __init__.py  base.py
socceraction/data/providers/opta/: __init__.py  loader.py
socceraction/data/providers/statsbomb/: __init__.py  loader.py  schema.py
socceraction/data/statsbomb/: __init__.py  loader.py  schema.py
socceraction/data/wyscout/: __init__.py  loader.py  schema.py
socceraction/features/: __init__.py  utils.py
socceraction/features/event/: statsbomb.py
socceraction/features/spadl/: actiontype.py  bodypart.py  contextual.py  location.py  possession.py  result.py  sequence.py  shot.py
socceraction/ml/: evaluation.py  pipeline.py  preprocessing.py
socceraction/spadl/: __init__.py  api.py  base.py  config.py  kloppy.py  opta.py  schema.py  spadl.py  spadlcfg.py  statsbomb.py  utils.py  wyscout.py
socceraction/vaep/: __init__.py  base.py  features.py  formula.py  labels.py
socceraction/xg/: __init__.py  base.py  labels.py
tests/: conftest.py  test_attributes.py  test_features.py  test_xthreat.py
tests/atomic/: test_atomic_features.py  test_atomic_labels.py  test_atomic_vaep.py  test_vaep.py
tests/data/: download.py  test_base.py  test_dataset.py  test_load_opta.py  test_load_statsbomb.py  test_load_wyscout.py  test_transforms.py
tests/data/opta/: f24-23-2018-1009316-eventdetails.xml  f7-23-2018-1009316-matchresults.xml
tests/data/whoscored/: 1005916.json
tests/data/wyscout_api/: competitions.json  events_2852835.json
tests/datasets/: download.py
tests/datasets/opta/: ma12_drnl1etmyzjz088y0bb4kh4pg.json  ma1_408bfjw6uz5k19zk4am50ykmh.json  ma3_bl2020-21-0000000066.json  ma5_drnl1etmyzjz088y0bb4kh4pg.json  tournament-2017-8.json
tests/datasets/spadl/: atomic_spadl.json  spadl.json
tests/datasets/whoscored/: 1005916.json
tests/datasets/wyscout_api/: matches_10174.json  seasons_1495.json
tests/spadl/: test_kloppy.py  test_opta.py  test_statsbomb.py  test_wyscout.py
tests/vaep/: test_features.py  test_labels.py  test_vaep.py  test_vaep_features.py  test_vaep_labels.py
(+15 files in other folders)
