[tool.poetry]
name = "socceraction"
version = "1.2.2"
description = "Convert soccer event stream data to the SPADL format and value on-the-ball player actions"
authors = ["Tom Decroos <tom.decroos.be@gmail.com>", "Pieter Robberechts <pieter.robberechts@kuleuven.be>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/ML-KULeuven/socceraction"
repository = "https://github.com/ML-KULeuven/socceraction"
documentation = "https://socceraction.readthedocs.io"
keywords = ["soccer", "football", "sports analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.3"
pandera = ">=0.7.1,<0.10.0"
numpy = "^1.21.2"
scikit-learn = ">=0.24.2,<1.1.0"
lxml = "^4.6.3"
statsbombpy = {version = "^1.3.0", optional = true}
requests-cache = {version = "^0.9.1", optional = true}

[tool.poetry.extras]
statsbomb = ["statsbombpy", "requests-cache"]

[tool.poetry.dev-dependencies]
black = "^22.3"
bumpversion = "^0.6.0"
flake8 = "^4.0.1"
mypy = "^0.942"
pylint = "^2.13.5"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
unify = "^0.5"
xgboost = "^1.5.2"
tables = "^3.6.1"
Sphinx = "^4.3.2"
furo = "^2022.4.7"
tqdm = "^4.64.0"
coverage = { version="^6.3", extras=["toml"] }
pytest-cov = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
flake8-isort = "^4.1.1"
sphinx-autodoc-typehints = "^1.17.1"
codecov = "^2.1.12"
flake8-rst-docstrings = "^0.2.5"
pre-commit = "^2.18.1"
sphinx-autobuild = "^2021.3.14"
pep8-naming = "^0.12.1"
Pygments = "^2.11.1"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:tables.*:"

[tool.coverage.paths]
source = ["socceraction", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["socceraction"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["socceraction", "tests"]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["socceraction", "tests"]
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 99
target-version = ['py38']
skip-string-normalization = 1
include = '\.pyi?$'

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["test.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["nox.*", "pytest", "pytest_mock", "_pytest.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
