[tool.poetry]
name = "socceraction"
version = "1.5.0"
description = "Convert soccer event stream data to the SPADL format and value on-the-ball player actions"
authors = ["Tom Decroos <tom.decroos.be@gmail.com>", "Pieter Robberechts <pieter.robberechts@kuleuven.be>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/ML-KULeuven/socceraction"
repository = "https://github.com/ML-KULeuven/socceraction"
documentation = "https://socceraction.readthedocs.io"
keywords = ["soccer", "football", "sports analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
lxml = "^4.9.3"
pandera = "^0.17.2"
statsbombpy = {version = "^1.11.0", optional = true}
xgboost = {version = "^2.0.0", optional = true}
tables = {version="^3.8.0", optional = true}
kloppy = {version=">=3.14.0", optional = true}

[tool.poetry.extras]
statsbomb = ["statsbombpy"]
xgboost = ["xgboost"]
hdf = ["tables"]
kloppy = ["kloppy"]

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
bumpversion = "^0.6.0"
coverage = {version = "^7.3.1", extras = ["toml"]}
codecov = "^2.1.13"
pre-commit = "^3.4.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.9.16"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
flake8-isort = "^6.1.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.3"
pyupgrade = "^3.13.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2023.9.10"
sphinx-autobuild = "^2021.3.14"
pygments = "^2.16.1"
sphinx-autodoc-typehints = "^1.24.0"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:tables.*:"

[tool.coverage.paths]
source = ["socceraction", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["socceraction"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["socceraction", "tests"]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["socceraction", "tests"]
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 99
target-version = ['py38']
skip-string-normalization = 1
include = '\.pyi?$'

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["test.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["nox.*", "pytest", "pytest_mock", "_pytest.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
